# mddunn-thesis

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  diamond_h.py  pyproject.toml
Benchmarks/: Common_Data.csv  diamond_h.py
Benchmarks/Combined Fig/: diamond_compare.ipynb  diamond_compare.tex  references.bib
Benchmarks/Combined Fig/data/: diamond_h_stopping_powers.csv  diamond_he_stopping_powers.csv  diamond_li_stopping_powers.csv
Benchmarks/Diamond_H/: diamond_h.py  diamond_h_stopping_powers.csv
Benchmarks/Diamond_H/data/: diamond_h_compare.py
Benchmarks/Diamond_He/: diamond_h_stopping_powers.csv  diamond_he.py  diamond_he_stopping_powers.csv
Benchmarks/Diamond_He/data/: diamond_he_compare.py  diamond_he_stopping_powers.csv  stopping_power_diamond_h.csv  stopping_power_diamond_he.csv
Benchmarks/Diamond_He/paper/: Crnjac.bib
Benchmarks/Diamond_Li/: diamond_he.py  diamond_li.py  diamond_li_stopping_powers.csv
Benchmarks/Diamond_Li/data/: reference_stopping_power.csv
data/: diamond_h_stopping_powers.csv  diamond_he_stopping_powers.csv  diamond_li_stopping_powers.csv  experimental_stopping_powers.csv  sic_he_stopping_powers.csv
notebooks/: diamond_compare.ipynb  sic_compare.ipynb
notebooks/src/: bindings.py  config.py
src/diamond_simulations/: bindings.py  config.py
src/diamond_simulations.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
