[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diamond_simulations"
version = "0.1.0"
description = "Diamond simulation utilities for RustBCA benchmarks"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "pandas",
  "dask",
  "matplotlib",
  "tomlkit",
  "IPython",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
